# smart-receipt-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_cn.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
docs/: blog.md  invoice_verification.md  modelscope_upload_guide.md
examples/: agent_example.py  basic_usage.py
examples/notebooks/: quickstart.ipynb
examples/sample_invoices/: README.md
prompts/: receipt-agent-prompt.md
src/: __init__.py  config.py  langchain_compat.py  main.py
src/agents/: __init__.py  receipt_agent.py
src/chains/: __init__.py  classification_chain.py  extraction_chain.py  ocr_chain.py
src/llm/: __init__.py  ernie.py
src/models/: __init__.py  invoice.py  receipt.py
src/ocr/: __init__.py  paddle_ocr.py
src/tools/: __init__.py  classification_tool.py  extraction_tool.py  ocr_tool.py
src/utils/: __init__.py  seal_extractor.py  validators.py
src/web/: __init__.py  app.py  components.py
tests/: test_agent.py  test_extraction.py  test_ocr.py  test_tools.py
