[project]
name = "smart-receipt-assistant"
version = "0.2.0"
description = "智能票据报销助手 - PaddleOCR-VL + LangChain + ERINE"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # LangChain 生态
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "langchain-openai>=0.1.0",
    "langchain-paddleocr>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    # OpenAI 兼容
    "openai>=1.0.0",
    # HTTP 和数据处理
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    # 环境变量
    "python-dotenv>=1.0.0",
    # CLI 美化
    "rich>=13.0.0",
    # 图像处理
    "pillow>=10.0.0",
    # Web UI
    "gradio>=4.0.0",
    # Excel 导出
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
receipt-assistant = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
